# si-trading-system

./: .env.example  .git-commit-hook.sh  .gitignore  .gitmessage  ARCHITECTURE_REVIEW_FINAL.md  Dockerfile  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  TODO.md  TODO_TOMORROW.md  commit_msg.txt  config.yaml.example  docker-compose.yml  institutional_strategies.json  integration-test-summary.md  package.json  pyproject.toml  requirements.txt  restart.ps1  run_trading.py  setup_postgres.ps1  start.bat  start.ps1  start_postgres.bat  start_postgres.ps1  stop_postgres.bat  test_telegram.py
api/: __init__.py  dependencies.py  main.py  schemas.py
broker/: __init__.py  base.py  connection_pool.py
core/: __init__.py
data/: __init__.py  account_models.py  cache.py  collector.py  loaders.py  models.py  repository.py  stock_filter.py  storage.py
deploy/: AWS_SETUP_GUIDE.md  AWS_초등학생_가이드.md  CICD_SETUP_GUIDE.md  DEPLOYMENT_GUIDE.md  README.md  aws-deploy.sh  docker-compose.prod.yml  nginx.conf  nginx.prod.conf  quick-deploy.ps1  setup.sh
docs/: ACCOUNT_NUMBER_FLOW.md  API_IMPLEMENTATION.md  BUG_FIX_ACCOUNT_NUMBER.md  BUG_FIX_COMPLETE.md  CURRENT_ENVIRONMENT.md  DATABASE_SETUP.md  DATA_COLLECTION.md  FINAL_TEST_RESULT.md  FRONTEND_BUILD_RESULT.md  FRONTEND_REVIEW.md  FRONTEND_SUMMARY.md  GIT_COMMIT_GUIDE.md  GIT_COMMIT_TIPS.md  GIT_ENCODING_FIX.md  INTEGRATION_TEST_PLAN.md  INTEGRATION_TEST_RESULT.md  INVESTOR_EXPERIENCE_ANALYSIS.md  OHLC_CHANGE_LOG.md  OHLC_DATA_STRATEGY.md  POSTGRES_MIGRATION.md  PROJECT_STATUS.md  REFACTORING_ICT_PYRAMIDING.md  REFACTORING_SUMMARY.md  (+22 more)
(+417 files in other folders)
